# Ship-Supply-Management-System

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml  flutter_rust_bridge.yaml
.github/: copilot-instructions.md
backend/: .env.example  Cargo.toml
backend/src/: api.rs  config.rs  database.rs  frb_generated.rs  lib.rs  main.rs  models.rs  response.rs  routes.rs
backend/src/entities/: mod.rs  order.rs  order_item.rs  ship.rs  ship_visit.rs  supplier.rs  supply_item.rs
backend/src/handlers/: mod.rs  orders.rs  ships.rs  suppliers.rs  supply_items.rs
backend/src/services/: calculation_service.rs  mod.rs  order_item_service.rs  order_service.rs  port_service.rs  ship_service.rs  ship_visit_service.rs  stock_service.rs  supplier_service.rs  supply_item_service.rs
docker/: init.sql
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/core/network/: api_client.dart
frontend/lib/core/router/: app_router.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/core/widgets/: linear_components.dart  main_scaffold.dart
frontend/lib/features/calendar/domain/models/: ship_visit.dart
frontend/lib/features/calendar/presentation/pages/: calendar_page.dart
frontend/lib/features/dashboard/presentation/pages/: dashboard_page.dart
frontend/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  models.dart
frontend/test/: order_status_flow_test.dart  ship_crud_test.dart
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
(+11 files in other folders)
